fix printing overflow elements on firefox

--- a/app/react/App/scss/layout/_content.scss
+++ b/app/react/App/scss/layout/_content.scss
@@ -2,6 +2,10 @@
 	height: 100%;
 	display: flex;
 	flex-direction: column;
+
+  @media print {
+    display: block;
+  }
 }
 
 .content-header {
